--- a/base.css
+++ b/base.css
@@ -85,6 +85,11 @@ a {
     line-height: 200%;
 }
 
+/* For figures - removes default margin */
+figure {
+    margin: 0;
+}
+
 
 /* =============== Header =============== */
 
@@ -361,7 +366,7 @@ footer {
         height: 64px;
     }
 
-    
+
     /* ---------- Footer section ---------- */
 
     #top-footer h4 {
