General optimization and fixes in different files

--- a/base.css
+++ b/base.css
@@ -353,6 +353,10 @@ footer {
         display: none;
     }
 
+    #header-menu-content-js {
+        display: none;
+    }
+
     header {
         padding: 0 24px;
     }
